Added basic settings page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world.
+<script src="js.js"></script>
+
+<h1>Select either white-on-black or black-on-white for your watchface</h1>
+
+<select name="select" id="chooser">
+  <option value="notReversed" selected>Black on white</option>
+  <option value="reversed">White on black</option>
+</select>
+
+<button id="close" type="button">Select</button>
