--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<script src="js.js"></script>
+<script>
+var encodeAndClose = function () {
+    var dropdown = Document.getElementById("chooser");
+    var response;
+    if (dropdown.options[e.selectedIndex].text == reversed) {
+        response = {"reversed": 1};
+    } else {
+        response = {"reversed": 0}; 
+    }
+    window.location.replace("pebblejs://close#" + encodeURIComponent(JSON.stringify(response)));
+};
+
+document.getElementById("close").onclick = encodeAndClose;
+</script>
 
 <h1>Select either white-on-black or black-on-white for your watchface</h1>
 
