Mostly working (I think)

--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-<script>
-var encodeAndClose = function () {
-    var dropdown = Document.getElementById("chooser");
-    var response;
-    if (dropdown.options[e.selectedIndex].text == reversed) {
-        response = {"reversed": 1};
-    } else {
-        response = {"reversed": 0}; 
-    }
-    window.location.replace("pebblejs://close#" + encodeURIComponent(JSON.stringify(response)));
-};
-
-document.getElementById("close").onclick = encodeAndClose;
-</script>
-
 <h1>Select either white-on-black or black-on-white for your watchface</h1>
 
 <select name="select" id="chooser">
@@ -21,3 +6,16 @@ document.getElementById("close").onclick = encodeAndClose;
 </select>
 
 <button id="close" type="button">Select</button>
+
+<script>
+var encodeAndClose = function () {
+    var dropdown = document.getElementById("chooser");
+    var response = {"reversed": 0};
+    if (dropdown.options[dropdown.selectedIndex].value == "reversed") {
+        response.reversed = 1;
+    }
+    window.location.href = "pebblejs://close#" + encodeURIComponent(JSON.stringify(response));
+};
+
+document.getElementById("close").onclick = encodeAndClose;
+</script>
